--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<div class="header-wrapper">
 		<h1 class="header-title"> Product name</h1>
 		<ul class="header-list">
-			<li class="header-iten">Put on this page information about your product</li>
-			<li class="header-iten">A detailed description of your product</li>
-			<li class="header-iten">Tell us about the advantages and merits</li>
-			<li class="header-iten">Associate the page with the payment system</li>
+			<li class="header-item">Put on this page information about your product</li>
+			<li class="header-item">A detailed description of your product</li>
+			<li class="header-item">Tell us about the advantages and merits</li>
+			<li class="header-item">Associate the page with the payment system</li>
 		</div>
 			<div class="header-img">
-			<img src="img/shape.jpg" alt="photo" width="469px" height="214px">
+			<img src="img/product name.jpg" alt="photo" width="469px" height="214px">
 		</div>
 		</ul>
 	</header>
@@ -27,9 +27,12 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
 			<p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 		</div>
-			<img src="img/video.png" alt="photo" width="430px" height="245px">
+			
+		<video src="https://player.vimeo.com/external/345204873.sd.mp4?s=88fda91cafdc58ae2c22611e2bcf1c22f400093c&profile_id=139&oauth2_token_id=57447761"  
+		controls width= "430" height="245"></video>
+
 		</section>
-		<section class="Dignity_and_pluses">
+		<section class="dignity_and_pluses">
 			<h2 class="h_dignity">Dignity and pluses product</h2>
 			<ul class="dignity-list">
 			<li class="dignity-list-item"> <p class="dignity-list-text">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p> </li>
@@ -154,7 +157,34 @@
 	</section>
 	</main>
 	<footer>
-
+		<h2 class="contacts">Contacts</h2>
+		<section class="information">
+		<div class="adress">
+		<form action="#" method="POST" >
+			<div>
+			<label for="Your name"></label>
+				<input type="Your name" id="name" placeholder="Your name:">
+				</div>
+				<div>
+					<label for="Your email"> </label>
+					<input type="Your email" id="email" placeholder="Your email:">
+			</div>
+			<div>
+				<textarea placeholder="Your message:"></textarea>
+			</div>
+				<button class="submit">Send</button>
+		</form>
+	</div>
+		<div class="contact-block">
+<ul>
+	<li class="list_contacts"> <a href="skype:here_your_login_skype" class="link_skype">here_your_login_skype</a></li>
+	<li class="list_contacts"> <a href="tel:279679659" class="link_tel">279679659</a></li>
+	<li class="list_contacts"> <a href="mailto:psdhtmlcss@mail.ru" class="link_email">psdhtmlcss@mail.ru</a></li>
+	<li class="list_contacts"> <a href="tel:80 00 4568 55 55" class="link_phone">80 00 4568 55 55</a></li>
+</ul>
+<a href="#"><img src="img/_emblems.png" ait="emblema" width="242px" height="42px" class="emblems"></a>
+</div>
+</section>
 	</footer>
 </body>
 </html>
