--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li class="header-item">Associate the page with the payment system</li>
 		</div>
 			<div class="header-img">
-			<img src="img/product name.jpg" alt="photo" width="469px" height="214px">
+			<img src="https://avatanplus.com/files/resources/mid/5820ada2a570e1583fa64376.jpg" alt="photo" width="469px" height="214px">
 		</div>
 		</ul>
 	</header>
@@ -182,7 +182,7 @@
 	<li class="list_contacts"> <a href="mailto:psdhtmlcss@mail.ru" class="link_email">psdhtmlcss@mail.ru</a></li>
 	<li class="list_contacts"> <a href="tel:80 00 4568 55 55" class="link_phone">80 00 4568 55 55</a></li>
 </ul>
-<a href="#"><img src="img/_emblems.png" ait="emblema" width="242px" height="42px" class="emblems"></a>
+<a href="#"><img src="img/emblems.png" ait="emblema" width="242px" height="42px" class="emblems"></a>
 </div>
 </section>
 	</footer>
