изменение на спрайты

--- a/index.html
+++ b/index.html
@@ -182,7 +182,14 @@
 	<li class="list_contacts"> <a href="mailto:psdhtmlcss@mail.ru" class="link_email">psdhtmlcss@mail.ru</a></li>
 	<li class="list_contacts"> <a href="tel:80 00 4568 55 55" class="link_phone">80 00 4568 55 55</a></li>
 </ul>
-<a href="#"><img src="img/emblems.png" ait="emblema" width="242px" height="42px" class="emblems"></a>
+<div class="emblems-block">
+<a href="#" class="emblems"></a>
+<a href="#" class="emblems"></a>
+<a href="#" class="emblems"></a>
+<a href="#" class="emblems"></a>
+<a href="#" class="emblems"></a>
+<a href="#" class="emblems"></a>
+</div>
 </div>
 </section>
 	</footer>
